--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,56 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    /* Asegúrate de ajustar la ruta de la imagen según donde la hayas guardado */
+    background-image: url('/src/assets/Hexagono.jpg');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    min-height: 100vh;
   }
-  to {
-    transform: rotate(360deg);
+
+  /* Ajuste para dispositivos móviles */
+@media (max-width: 768px) {
+    body {
+      background-attachment: scroll;
+    }
+    .header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+    
+      .redes-sociales {
+        margin-top: 10px;
+      }
   }
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  .contenedor-principal {
+    background-color: rgba(255, 255, 255, 0.7); /* Fondo semi-transparente para mejorar la legibilidad */
+    padding: 20px;
+    margin: 20px;
+    border-radius: 10px;
   }
-}
 
-.card {
-  padding: 2em;
-}
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+  }
 
-.read-the-docs {
-  color: #888;
-}
+  .redes-sociales {
+    display: flex;
+    gap: 15px;
+  }
+
+  .redes-sociales a {
+    color: #333;
+    font-size: 40px;
+    transition: color 0.3s ease;
+  }
+  
+  .redes-sociales a:hover {
+    color: #007bff;
+  }
