--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,94 @@ body {
     background-attachment: fixed;
     background-size: cover;
     min-height: 100vh;
+  }  
+
+  .contenedor-principal {
+    background-color: rgba(255, 255, 255, 0.0); /* Fondo semi-transparente para mejorar la legibilidad */
+    padding: 20px;
+    margin: 20px;
+    border-radius: 10px;
+  }
+
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;    
+  }
+
+  .redes-sociales {
+    display: flex;
+    gap: 15px;
+  }
+
+  .redes-sociales a {
+    color: white;
+    font-size: 40px;
+    transition: color 0.3s ease;
+  }
+  
+  .redes-sociales a:hover {
+    color: #03d5ff;
+  }
+
+  h1 {
+    color: #ffffff; /* Texto blanco para contrastar con el fondo */
+    font-size: 2rem; /* Tamaño grande para el título */
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgba(4, 10, 11, 0.647); /* Sombra para mejorar la legibilidad */
+    margin-bottom: 20px;
+    font-family: 'Arial', sans-serif; /* Puedes cambiar a una fuente que prefieras */
+    letter-spacing: 1px; /* Espaciado entre letras */
+  }
+
+  .proyectos-contenedor {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin-top: 40px;
+  }
+
+  .proyecto-item {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  .proyecto-item.invertir {
+    flex-direction: row-reverse;
+  }
+  
+  .proyecto-imagen {
+    flex: 1;
+    max-width: 50%;
+  }
+
+  .proyecto-imagen img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 8px; 
+  }
+
+  .proyecto-info {
+    flex: 1;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  .proyecto-info h2 {
+    margin-top: 0;
+    color: #1f9abf;
+  }
+  
+  .proyecto-info p {
+    line-height: 1.6;
+    text-align: justify;
   }
 
   /* Ajuste para dispositivos móviles */
@@ -19,38 +107,19 @@ body {
     .header {
         flex-direction: column;
         align-items: flex-start;
-      }
+    }
     
-      .redes-sociales {
+    .redes-sociales {
         margin-top: 10px;
-      }
-  }
-
-  .contenedor-principal {
-    background-color: rgba(255, 255, 255, 0.7); /* Fondo semi-transparente para mejorar la legibilidad */
-    padding: 20px;
-    margin: 20px;
-    border-radius: 10px;
-  }
-
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
-  }
-
-  .redes-sociales {
-    display: flex;
-    gap: 15px;
-  }
-
-  .redes-sociales a {
-    color: #333;
-    font-size: 40px;
-    transition: color 0.3s ease;
-  }
-  
-  .redes-sociales a:hover {
-    color: #007bff;
+    }
+    .proyecto-item,.proyecto-item.invertir {
+    flex-direction: column !important;
+    }
+    .proyecto-imagen {
+        max-width: 100% !important;
+        width: 100%;
+    }
+    .proyecto-info {
+        width: 100%;
+    }
   }
