--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+
 body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
     /* Asegúrate de ajustar la ruta de la imagen según donde la hayas guardado */
-    background-image: url('/src/assets/Hexagono.jpg');
+    /*background-image: url('/src/assets/Hexagono.jpg');*/
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -12,27 +15,47 @@ body {
   }  
 
   .contenedor-principal {
-    background-color: rgba(255, 255, 255, 0.0); /* Fondo semi-transparente para mejorar la legibilidad */
-    padding: 20px;
-    margin: 20px;
-    border-radius: 10px;
+    margin-top: 0;
+    padding: 0;
   }
 
-  .header {
+  .top-bar {
+    background-color: hsla(222, 90%, 42%, 1); /* Color de fondo semi-transparente */
+    width: 100%;
+    position: static;
+    top: 0;
+    left: 0;
+    z-index: 1000;  
+    padding: 20px 0 20px;
+  }
+  
+  .top-bar-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 20px;    
+    padding: 0 20px;
+    max-width: 100%;
+    margin: 0 auto;
   }
-
+  
+  .top-bar-title {
+    color: white;
+    margin: 0;
+    font-size: 1.3rem;
+    font-family: 'Bebas Neue', sans-serif;
+    font-weight: normal;
+    letter-spacing: 2px;
+    white-space: nowrap; /* Evita que el título se divida en múltiples líneas */
+  }
+  
   .redes-sociales {
     display: flex;
     gap: 15px;
   }
-
+  
   .redes-sociales a {
     color: white;
-    font-size: 40px;
+    font-size: 1.5rem;
     transition: color 0.3s ease;
   }
   
@@ -50,11 +73,103 @@ body {
     letter-spacing: 1px; /* Espaciado entre letras */
   }
 
+  .hero-section {
+    background-color: hsla(222, 90%, 42%, 1);
+    padding: 20px; /* Añadimos padding horizontal */
+    text-align: center;
+    width: 100%;
+    margin-top: 0; /* Ajusta este valor para que coincida con la altura de tu TopBar */
+    box-sizing: border-box; /* Incluye el padding en el ancho total */
+  }
+  
+  .hero-image {
+    width: 100px; /* Ajusta este valor según el tamaño que desees */
+    height: auto; /* Mantiene la proporción de la imagen */
+    max-width: 100%; /* Asegura que la imagen no sea más ancha que su contenedor */
+    margin-bottom: 20px; 
+    animation: floatAndRotate 10s ease-in-out infinite;
+    filter: drop-shadow(0 0 10px rgb(1, 3, 3));
+    transition: all 0.3s ease; 
+  }  
+
+  .hero-image:hover {
+    transform: scale(1.1);
+    animation-play-state: paused;
+  }
+  
+  .hero-text {
+    font-size: 2.5rem;
+    color: white;
+    font-family: 'Bebas Neue', sans-serif;
+    font-weight: normal;
+    letter-spacing: 2px;    
+    margin: 0;
+  }
+
+  .hero-text2 {
+    font-size: 1.2rem;
+    color: white;
+    font-family: 'EB Garamond', serif;    
+    font-weight: 400;
+    font-style: normal;
+    margin: 0;
+  }
+
+  .info-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: top;
+    padding: 20px;
+    background-color: #D89825;
+    margin: 20px auto;
+    height: 20vh;
+    max-height: 400px;    
+    overflow: hidden;
+  }
+  
+  .info-text {
+    flex: 1;
+    padding-right: 40px;
+  }
+  
+  .info-text h2 {
+    font-family: 'Bebas Neue', sans-serif;
+    font-weight: normal;
+    letter-spacing: 2px;
+    font-size: 3.5rem;
+    color: #ffffff;
+    margin: 0;
+    line-height: 1.2;
+  }
+  
+  .info-image-container {
+    flex: 1;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    height: 100%;
+  }
+  
+  .info-image {
+    max-width: 100%;
+    height: 100%;  
+    object-fit: contain;
+  }
+  
+  
   .proyectos-contenedor {
     display: flex;
     flex-direction: column;
     gap: 40px;
-    margin-top: 40px;    
+    margin-top: 40px;  
+    max-width: 1000px; /* Ajusta este valor según tus preferencias */
+    margin-left: auto;
+    margin-right: auto;
+    padding: 40px 20px;
+    background-image: url('/images/bg1.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
   }
 
   .proyecto-item {
@@ -65,7 +180,15 @@ body {
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border: 3px solid #167a9c;   
+    border: 3px solid #167a9c; 
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.5s ease, transform 0.5s ease;    
+  }
+
+  .proyecto-item.visible {
+    opacity: 1;
+    transform: translateY(0);
   }
 
   .proyecto-item.invertir {
@@ -132,21 +255,14 @@ body {
     margin-top: 20px;
   }
 
+
   /* Ajuste para dispositivos móviles */
 @media (max-width: 768px) {
     body {
       background-attachment: scroll;
-    }
-    .header {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    
-    .redes-sociales {
-        margin-top: 10px;
-    }
+    }      
     .proyecto-item,.proyecto-item.invertir {
-    flex-direction: column !important;
+      flex-direction: column !important;
     }
     .proyecto-imagen {
         max-width: 100% !important;
@@ -154,5 +270,39 @@ body {
     }
     .proyecto-info {
         width: 90%;
+    } 
+    .info-section {
+      flex-direction: flex;
+      padding: 20px 10px;
+    }
+  
+    .info-text {
+      padding-right: 0;
+      margin-bottom: 20px;
+    }
+  
+    .info-text h2 {
+      font-size: 3rem;
+    }
+  
+    .info-image-container {
+      width: 100%;
+    }
+  
+    .info-image {
+      max-width: 80%;
+    }   
+  }
+
+  @keyframes floatAndRotate {
+    0% {
+      transform: translateY(0px) rotate(0deg);
+    }
+    50% {
+      transform: translateY(-30px) rotate(180deg);
+    }
+    100% {
+      transform: translateY(0px) rotate(360deg);
     }
   }
+  
