--- a/src/App.css
+++ b/src/App.css
@@ -20,19 +20,15 @@ body {
   }
 
   .top-bar {
-    background-color: hsla(222, 90%, 42%, 1); /* Color de fondo semi-transparente */
+    background-color: rgb(11, 69, 203); /* Color de fondo semi-transparente */
     width: 100%;
-    position: static;
-    top: 0;
-    left: 0;
-    z-index: 1000;  
+    position: static; 
     padding: 20px 0 20px;
   }
   
   .top-bar-content {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: space-between;    
     padding: 0 20px;
     max-width: 100%;
     margin: 0 auto;
@@ -41,12 +37,12 @@ body {
   .top-bar-title {
     color: white;
     margin: 0;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     font-family: 'Bebas Neue', sans-serif;
     font-weight: normal;
     letter-spacing: 2px;
     white-space: nowrap; /* Evita que el título se divida en múltiples líneas */
-  }
+   }
   
   .redes-sociales {
     display: flex;
@@ -55,27 +51,17 @@ body {
   
   .redes-sociales a {
     color: white;
-    font-size: 1.5rem;
+    font-size: 1.9rem;
     transition: color 0.3s ease;
   }
   
   .redes-sociales a:hover {
     color: #03d5ff;
-  }
-
-  h1 {
-    color: #ffffff; /* Texto blanco para contrastar con el fondo */
-    font-size: 2rem; /* Tamaño grande para el título */
-    font-weight: bold;
-    text-shadow: 2px 2px 4px rgba(4, 10, 11, 0.647); /* Sombra para mejorar la legibilidad */
-    margin-bottom: 20px;
-    font-family: 'Arial', sans-serif; /* Puedes cambiar a una fuente que prefieras */
-    letter-spacing: 1px; /* Espaciado entre letras */
-  }
+  } 
 
   .hero-section {
     background-color: hsla(222, 90%, 42%, 1);
-    padding: 20px; /* Añadimos padding horizontal */
+    padding: 10px 0 100px; /* Añadimos padding horizontal */    
     text-align: center;
     width: 100%;
     margin-top: 0; /* Ajusta este valor para que coincida con la altura de tu TopBar */
@@ -83,12 +69,11 @@ body {
   }
   
   .hero-image {
-    width: 100px; /* Ajusta este valor según el tamaño que desees */
+    width: 30px; /* Ajusta este valor según el tamaño que desees */
     height: auto; /* Mantiene la proporción de la imagen */
     max-width: 100%; /* Asegura que la imagen no sea más ancha que su contenedor */
     margin-bottom: 20px; 
-    animation: floatAndRotate 10s ease-in-out infinite;
-    filter: drop-shadow(0 0 10px rgb(1, 3, 3));
+    animation: rotate 8s linear infinite;    
     transition: all 0.3s ease; 
   }  
 
@@ -98,16 +83,17 @@ body {
   }
   
   .hero-text {
-    font-size: 2.5rem;
+    font-size: 2.9rem;
     color: white;
     font-family: 'Bebas Neue', sans-serif;
     font-weight: normal;
     letter-spacing: 2px;    
     margin: 0;
+    white-space: nowrap;
   }
 
   .hero-text2 {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     color: white;
     font-family: 'EB Garamond', serif;    
     font-weight: 400;
@@ -115,44 +101,74 @@ body {
     margin: 0;
   }
 
+  .hero-text3 {
+    font-size: 1.3em;
+    color: white;
+    font-family: 'EB Garamond', serif;  
+    font-weight: 400;
+    font-style: normal;        
+    margin-top: 50px;
+    margin-left: 25%;
+    margin-right: 25%;
+    max-width: 1000px;
+    letter-spacing: 2px;
+    line-height: 1.3;
+    text-align: justify;
+    hyphens: auto;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    word-break: break-word;
+  }
+
   .info-section {
     display: flex;
-    justify-content: space-between;
-    align-items: top;
+    justify-content: space-between;    
     padding: 20px;
     background-color: #D89825;
-    margin: 20px auto;
-    height: 20vh;
+    margin: 6px auto;
+    min-height: 200px;
     max-height: 400px;    
     overflow: hidden;
   }
   
   .info-text {
-    flex: 1;
-    padding-right: 40px;
+    flex: 1; 
+    padding-right: 20px;    
   }
   
   .info-text h2 {
     font-family: 'Bebas Neue', sans-serif;
     font-weight: normal;
     letter-spacing: 2px;
-    font-size: 3.5rem;
+    font-size: 3rem;
     color: #ffffff;
     margin: 0;
-    line-height: 1.2;
+    line-height: 1.2;     
+  }
+  .info-text h3 {
+    font-family: 'EB Garamond', serif;
+    font-weight: normal;
+    letter-spacing: 2px;
+    font-size: 1.3rem;
+    color: #ffffff;
+    margin: 0;
+    line-height: 1.3;
+    text-align: justify;  
+    hyphens: auto;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    word-break: break-word;    
   }
   
-  .info-image-container {
-    flex: 1;
+  .info-image-container {    
     display: flex;
-    justify-content: right;
-    align-items: center;
-    height: 100%;
+    justify-content: center;
+    align-items: center;    
   }
   
   .info-image {
-    max-width: 100%;
-    height: 100%;  
+    max-width: 70%;
+    height: auto;  
     object-fit: contain;
   }
   
@@ -160,21 +176,22 @@ body {
   .proyectos-contenedor {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    width: 100%;
+    box-sizing: border-box;
     gap: 40px;
-    margin-top: 40px;  
-    max-width: 1000px; /* Ajusta este valor según tus preferencias */
+    margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
     padding: 40px 20px;
     background-image: url('/images/bg1.jpg');
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;
+    background-attachment: fixed;      
   }
 
   .proyecto-item {
-    display: flex;
-    align-items: center;
+    display: flex;    
     gap: 20px;
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 10px;
@@ -183,7 +200,9 @@ body {
     border: 3px solid #167a9c; 
     opacity: 0;
     transform: translateY(20px);
-    transition: opacity 0.5s ease, transform 0.5s ease;    
+    transition: opacity 0.5s ease, transform 0.5s ease; 
+    max-width: 1000px; 
+    width: 100%;  
   }
 
   .proyecto-item.visible {
@@ -240,19 +259,24 @@ body {
 
   .not-found {
     text-align: center;
-    padding: 50px;
-    background-color: rgba(255, 255, 255, 0.8);
-    border-radius: 10px;
-    margin: 50px auto;
+    padding: 5px 5px 5px;
+    background-color: rgba(255, 255, 255, 0.8);    
+    margin: 0 auto;
     max-width: 600px;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
   }
   
-  .not-found h1 {
+  .not-found h2 {
     color: #1f9abf;
+    font-size: 3.5em;
   }
   
   .not-found p {
     margin-top: 20px;
+    font-size: 2em;
   }
 
 
@@ -260,7 +284,41 @@ body {
 @media (max-width: 768px) {
     body {
       background-attachment: scroll;
-    }      
+    }   
+    .top-bar-title {      
+      font-size: 1.05rem;
+    }  
+    .redes-sociales a {      
+      font-size: 1.5rem;      
+    } 
+
+    .hero-text {
+      font-size: 2.1rem;      
+    }  
+    .hero-text2 {
+      font-size: 0.95rem;      
+    }  
+    .hero-text3 {
+      font-size: 0.95rem; 
+      margin-top: 20px;
+      margin-left: 10%;
+      margin-right: 10%;
+    }
+        
+    .info-text {
+      max-width: 100%;
+    }
+    .info-text h2 {
+      font-size: 1.5rem;
+      white-space: nowrap;       
+    }  
+    .info-text h3 {
+      font-size: 1rem;            
+    } 
+    .info-image-container {
+      display: none; /* Oculta la imagen en pantallas pequeñas */
+    }
+
     .proyecto-item,.proyecto-item.invertir {
       flex-direction: column !important;
     }
@@ -271,38 +329,26 @@ body {
     .proyecto-info {
         width: 90%;
     } 
-    .info-section {
-      flex-direction: flex;
-      padding: 20px 10px;
+    
+    .not-found {
+      margin: 0px;
+      padding: 0px;
     }
-  
-    .info-text {
-      padding-right: 0;
-      margin-bottom: 20px;
+    .not-found h2 {
+      font-size: 2.5em;
     }
-  
-    .info-text h2 {
-      font-size: 3rem;
+    .not-found p {
+      font-size: 1.5em;
+      margin-top: 0px;
     }
-  
-    .info-image-container {
-      width: 100%;
-    }
-  
-    .info-image {
-      max-width: 80%;
-    }   
   }
 
-  @keyframes floatAndRotate {
-    0% {
-      transform: translateY(0px) rotate(0deg);
+  @keyframes rotate {
+    from {
+      transform: rotate(0deg);
     }
-    50% {
-      transform: translateY(-30px) rotate(180deg);
-    }
-    100% {
-      transform: translateY(0px) rotate(360deg);
+    to {
+      transform: rotate(360deg);
     }
   }
   
