--- a/src/App.css
+++ b/src/App.css
@@ -150,8 +150,8 @@ body {
     font-weight: normal;
     letter-spacing: 2px;
     font-size: 1.3rem;
-    color: #ffffff;
-    margin: 0;
+    color: #ffffff;    
+    margin-top: 10px;
     line-height: 1.3;
     text-align: justify;  
     hyphens: auto;
@@ -234,7 +234,7 @@ body {
   
   .proyecto-info h2 {
     margin-top: 0;
-    color: #1f9abf;
+    color: hsla(222, 90%, 42%);
   }
   
   .proyecto-info p {
@@ -245,7 +245,7 @@ body {
   .boton-mas-info {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #1f9abf;
+    background-color: hsla(222, 90%, 42%);
     color: white;
     text-decoration: none;
     border-radius: 5px;
@@ -254,7 +254,7 @@ body {
   }
   
   .boton-mas-info:hover {
-    background-color: #167a9c;
+    background-color: rgb(74, 129, 255);
   }
 
   .not-found {
@@ -267,17 +267,41 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-  }
-  
+  }  
   .not-found h2 {
     color: #1f9abf;
     font-size: 3.5em;
-  }
-  
+  }  
   .not-found p {
     margin-top: 20px;
     font-size: 2em;
   }
+
+  .scroll-to-top {
+    position: fixed; /* Fija el botón en la pantalla */
+    bottom: 20px; /* Distancia desde la parte inferior */
+    right: 20px; /* Distancia desde la derecha */
+    width: 50px; /* Ancho del botón */
+    height: 50px; /* Altura del botón */
+    background-color: #D89825; /* Color de fondo */
+    color: black; /* Color del texto */
+    border: none; /* Sin borde */
+    border-radius: 50%; /* Hace el botón redondo */
+    cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
+    z-index: 1000; /* Asegúrate de que esté por encima de otros elementos */
+    transition: background-color 0.3s ease; /* Transición suave para el color de fondo */
+    display: flex; /* Para centrar el contenido */
+    justify-content: center; /* Centra horizontalmente */
+    align-items: center; /* Centra verticalmente */
+  }  
+  .scroll-to-top:hover {
+    background-color: #ffcd6f; /* Color de fondo al pasar el mouse */
+  }  
+  .scroll-to-top .flecha {
+    font-size: 2em;
+    text-decoration: solid;
+  }
+
 
 
   /* Ajuste para dispositivos móviles */
