--- a/src/App.css
+++ b/src/App.css
@@ -197,7 +197,7 @@ body {
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border: 3px solid #167a9c; 
+    /*border: 3px solid #167a9c; */
     opacity: 0;
     transform: translateY(20px);
     transition: opacity 0.5s ease, transform 0.5s ease; 
