--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
     margin: 0;
@@ -24,16 +24,14 @@ body {
     width: 100%;
     position: static; 
     padding: 20px 0 20px;
-  }
-  
+  }  
   .top-bar-content {
     display: flex;
     justify-content: space-between;    
     padding: 0 20px;
     max-width: 100%;
     margin: 0 auto;
-  }
-  
+  }  
   .top-bar-title {
     color: white;
     margin: 0;
@@ -76,22 +74,22 @@ body {
   .hero-text2 {
     font-size: 1.3rem;
     color: white;
-    font-family: 'EB Garamond', serif;    
-    font-weight: 400;
-    font-style: normal;
+    font-family: "Montserrat", serif;
+    font-style: normal;    
+    font-weight: 400;    
     margin: 0;
   }
   .hero-text3 {
     font-size: 1.3em;
     color: white;
-    font-family: 'EB Garamond', serif;  
+    font-family: "Montserrat", serif;  
     font-weight: 400;
     font-style: normal;        
     margin-top: 50px;
     margin-left: 25%;
     margin-right: 25%;
     max-width: 1000px;
-    letter-spacing: 2px;
+    letter-spacing: 0.5px;
     line-height: 1.3;
     text-align: justify;
     hyphens: auto;
@@ -124,9 +122,10 @@ body {
     line-height: 1.2;     
   }
   .info-text h3 {
-    font-family: 'EB Garamond', serif;
+    font-family: "Montserrat", serif;
     font-weight: normal;
-    letter-spacing: 2px;
+    font-weight: 400;
+    letter-spacing: 0.5px;
     font-size: 1.3rem;
     color: #ffffff;    
     margin-top: 10px;
@@ -136,14 +135,12 @@ body {
     -webkit-hyphens: auto;
     -ms-hyphens: auto;
     word-break: break-word;    
-  }
-  
+  }  
   .info-image-container {    
     display: flex;
     justify-content: center;
     align-items: center;    
-  }
-  
+  }  
   .info-image {
     max-width: 70%;
     height: auto;  
@@ -203,6 +200,7 @@ body {
     transform: translateY(20px);
     transition: opacity 0.5s ease, transform 0.5s ease; 
     max-width: 1000px; 
+    min-height: 300px;
     width: calc(100% - 40px); 
     margin: 0 20px 20px;    
   }
@@ -214,12 +212,15 @@ body {
     flex-direction: row-reverse;
   }
   .proyecto-imagen {
+    background-color: black;
     flex: 1;
     max-width: 50%;
+    height: 300px; 
+    overflow: hidden;   
   }
   .proyecto-imagen img {
     width: 100%;
-    height: auto;
+    height: 100%;
     object-fit: cover;
     border-radius: 8px; 
   }
@@ -232,7 +233,7 @@ body {
     margin-top: 0;
     color: white;
     font-family: 'Bebas Neue', sans-serif;
-    font-weight: normal;
+    font-weight: 400;    
     letter-spacing: 3px;
     font-size: 2rem;    
   }  
@@ -240,9 +241,9 @@ body {
     line-height: 1.2;
     text-align: justify;
     color: white;
-    font-family: 'EB Garamond', serif;
-    font-weight: normal;
-    letter-spacing: 1.5px;
+    font-family: "Montserrat", serif;    
+    font-weight: 400;
+    letter-spacing: 0.5px;
     font-size: 1.3rem;
     hyphens: auto;
     -webkit-hyphens: auto;
@@ -284,18 +285,28 @@ body {
   }
 
   .footer {
-    background-color: rgb(9, 9, 9); /* Color de fondo negro */
-    color: white; /* Color del texto */
-    padding: 20px; /* Espaciado interno */
+    background-color: white; /* Color de fondo negro */
+    color: #0b45cb; /* Color del texto */
+    padding: 0px; /* Espaciado interno */
     text-align: center; /* Centra el contenido */
   }  
   .footer-content {
     max-width: 1200px; /* Ancho máximo del contenido */
-    margin: 0 auto; /* Centra el contenido */
+    margin: 10px auto; /* Centra el contenido */
   }  
   .footer h3 {
     margin: 0; /* Elimina el margen por defecto */
-  }  
+  } 
+  .footer-content p {
+    font-family: "Montserrat", serif;
+    font-style: normal;
+    font-weight: 400;
+  } 
+  .footer-content h3 {
+    font-family: "Montserrat", serif;
+    font-style: normal;
+    font-weight: 400;
+  } 
   .social-icons {
     display: flex; /* Usa flexbox para alinear los íconos */
     justify-content: center; /* Centra los íconos */
@@ -303,12 +314,17 @@ body {
     margin-top: 10px; /* Espacio superior */
   }  
   .social-icons a {
-    color: white; /* Color de los íconos */
+    color: #0b45cb; /* Color de los íconos */
     font-size: 1.5rem; /* Tamaño de los íconos */
     transition: color 0.3s ease; /* Transición suave para el color */
   }  
   .social-icons a:hover {
     color: #03d5ff; /* Color al pasar el mouse */
+  }
+  .footer-linea {
+    width: 100%;
+    height: 30px;
+    background-color: #D89825;
   }
 
   .scroll-to-top {
@@ -374,7 +390,7 @@ body {
       font-size: 1rem;            
     } 
     .info-image-container {
-      display: none; /* Oculta la imagen en pantallas pequeñas */
+      display: none; 
     }
     .proyecto-info h2 {      
       font-size: 1.4rem;    
@@ -390,7 +406,14 @@ body {
     .proyecto-imagen {
         max-width: 100% !important;
         width: 100%;
+        height: 150px;
+        overflow: hidden;
     }
+    .proyecto-imagen img {
+      width: 100%;
+      height: 100%; 
+      object-fit: cover; 
+  }
     .proyecto-info {
         width: 90%;
     }     
