--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@ body {
   margin-left: 10px;
 }
 .language-button img {
-  width: 50px; 
+  width: 40px; 
   height: auto; 
 }
 
@@ -204,7 +204,7 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    background: linear-gradient(to bottom, hsla(222, 72%, 7%, 1), rgba(15, 84, 233, 0)); 
+    background: linear-gradient(to bottom, rgb(0, 41, 137), rgba(0, 41, 137, 0)); 
     z-index: -1; 
   }
   .proyecto-item {
@@ -379,9 +379,10 @@ body {
     .top-bar-title {      
       font-size: 1.05rem;
     }  
-    .redes-sociales a {      
-      font-size: 1.5rem;      
-    } 
+    .language-button img {
+      width: 30px; 
+      height: auto; 
+  }
 
     .hero-text {
       font-size: 2.1rem;      
