--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@ body {
     width: 30px; /* Ajusta este valor según el tamaño que desees */
     height: auto; /* Mantiene la proporción de la imagen */
     max-width: 100%; /* Asegura que la imagen no sea más ancha que su contenedor */
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
     animation: rotate 8s linear infinite;    
     transition: all 0.3s ease; 
   } 
@@ -121,7 +121,7 @@ body {
     justify-content: space-between;    
     padding: 20px;
     background-color: #D89825;
-    margin: 6px auto;
+    margin: 0 auto; /* aca 6px para raya blanca */
     min-height: 200px;
     max-height: 400px;    
     overflow: hidden;
@@ -173,7 +173,7 @@ body {
     width: 100%;
     box-sizing: border-box;
     gap: 40px;
-    margin-top: 5px;      
+    margin-top: 0;    /*5px para raya blanca*/  
     padding: 0 0;
     background-image: url('/images/bg1.jpg');
     background-size: cover;
