--- a/src/App.css
+++ b/src/App.css
@@ -187,7 +187,9 @@ body {
     margin-top: 0;    
     width: 100%;
     height: 70px;
-    text-align: center;    
+    text-align: center;  
+    box-sizing: border-box; 
+    overflow: hidden; 
   }
   .proyectos-titulo h2 { 
     margin: 0;   
