--- a/src/App.css
+++ b/src/App.css
@@ -17,13 +17,55 @@ body {
   padding: 0;
 }
 
+.bg-hex {
+  overflow: hidden;
+  background: linear-gradient(90deg, rgba(2, 0,121, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
+}
+.box div {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  border: 6px solid rgba(255, 255, 255, 0.8);
+}
+.box div:nth-child(1) {
+  top: 50%;
+  left: 10%;
+  animation: animate 10s linear infinite;
+}
+.box div:nth-child(2) {
+  top: 45%;
+  left: 80%;
+  animation: animate 10s linear infinite;
+}
+.box div:nth-child(3) {
+  top: 25%;
+  left: 30%;
+  animation: animate 10s linear infinite;
+}
+.box div:nth-child(4) {
+  top: 65%;
+  left: 50%;
+  animation: animate 10s linear infinite;
+}
+.box div:nth-child(5) {
+  top: 15%;
+  left: 85%;
+  animation: animate 10s linear infinite;
+}
+.box div:nth-child(6) {
+  top: 10%;
+  left: 10%;
+  animation: animate 10s linear infinite;
+}
+
 .top-bar {
   display: flex;
   align-items: center;
-  background-color: rgb(11, 69, 203);
+  /*background-color: rgb(11, 69, 203);*/
   width: 100%;
   position: static; 
-  padding: 20px 0 20px;
+  padding: 20px 0 20px;  
 }  
 .top-bar-content {
   display: flex;
@@ -42,6 +84,7 @@ body {
   letter-spacing: 2px;
   white-space: nowrap; 
   padding-left: 20px;
+  transition: font-size 0.5s ease;
  }  
 .topbar-button{
   display: flex; 
@@ -57,16 +100,17 @@ body {
 .language-button img {
   width: 40px; 
   height: auto; 
+  transition: width 0.5s ease;
 }
 
 
   .hero-section {
-    background-color: hsla(222, 90%, 42%, 1);
+    /*background-color: hsla(222, 90%, 42%, 1);*/
     padding: 10px 0 100px;    
     text-align: center;
     width: 100%;
     margin-top: 0; 
-    box-sizing: border-box; 
+    box-sizing: border-box;     
   }  
   .hero-image {
     width: 30px; /* Ajusta este valor según el tamaño que desees */
@@ -88,6 +132,7 @@ body {
     letter-spacing: 2px;    
     margin: 0;
     white-space: nowrap;
+    transition: font-size 0.5s ease;
   }
   .hero-text2 {
     font-size: 1.3rem;
@@ -96,6 +141,7 @@ body {
     font-style: normal;    
     font-weight: 400;    
     margin: 0;
+    transition: font-size 0.5s ease;
   }
   .hero-text3 {
     font-size: 1.3em;
@@ -114,6 +160,7 @@ body {
     -webkit-hyphens: auto;
     -ms-hyphens: auto;
     word-break: break-word;
+    transition: font-size 0.5s ease;
   }
 
   .info-section {
@@ -128,7 +175,8 @@ body {
   }  
   .info-text {
     flex: 1; 
-    padding-right: 20px;    
+    padding-right: 20px;  
+    transition: font-size 0.5s ease;  
   }  
   .info-text h2 {
     font-family: 'Bebas Neue', sans-serif;
@@ -137,7 +185,8 @@ body {
     font-size: 3rem;
     color: #ffffff;
     margin: 0;
-    line-height: 1.2;     
+    line-height: 1.2;  
+    transition: font-size 0.5s ease;   
   }
   .info-text h3 {
     font-family: "Montserrat", serif;
@@ -152,7 +201,8 @@ body {
     hyphens: auto;
     -webkit-hyphens: auto;
     -ms-hyphens: auto;
-    word-break: break-word;    
+    word-break: break-word; 
+    transition: font-size 0.5s ease;   
   }  
   .info-image-container {    
     display: flex;
@@ -189,7 +239,7 @@ body {
     height: 70px;
     text-align: center;  
     box-sizing: border-box; 
-    overflow: hidden; 
+    overflow: hidden;    
   }
   .proyectos-titulo h2 { 
     margin: 0;   
@@ -198,6 +248,7 @@ body {
     font-weight: normal;
     letter-spacing: 2px;
     font-size: 3rem;
+    transition: font-size 0.5s ease;
   }
   .proyectos-titulo::before {
     content: '';
@@ -278,6 +329,7 @@ body {
     border-radius: 5px;
     transition: background-color 0.3s ease;
     margin-top: 15px;
+    animation: 1.5s btnpulse infinite ease-in-out;    
   }  
   .boton-mas-info:hover {
     background-color: rgb(74, 129, 255);
@@ -347,44 +399,120 @@ body {
   }
 
   .scroll-to-top {
-    position: fixed; /* Fija el botón en la pantalla */
-    bottom: 20px; /* Distancia desde la parte inferior */
-    right: 20px; /* Distancia desde la derecha */
-    width: 50px; /* Ancho del botón */
-    height: 50px; /* Altura del botón */
-    background-color: #D89825; /* Color de fondo */
-    color: black; /* Color del texto */
-    border: none; /* Sin borde */
-    border-radius: 50%; /* Hace el botón redondo */
-    cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
-    z-index: 1000; /* Asegúrate de que esté por encima de otros elementos */
-    transition: background-color 0.3s ease; /* Transición suave para el color de fondo */
-    display: flex; /* Para centrar el contenido */
-    justify-content: center; /* Centra horizontalmente */
-    align-items: center; /* Centra verticalmente */
+    width: 50px;
+    height: 50px;
+    bottom: 40px; 
+    left: 20px;     
+    border-radius: 50%;
+    background-color: #D89825;
+    border: none;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /*box-shadow: 0px 0px 0px 4px rgba(0, 0, 0, 0.253);*/
+    cursor: pointer;
+    transition-duration: 0.3s;
+    overflow: hidden;
+    position: fixed;    
   }
-  .scroll-to-top:hover {
-    background-color: #ffcd6f; /* Color de fondo al pasar el mouse */
+  .scroll-to-top:hover {    
+    width: 140px;
+    border-radius: 50px;
+    transition-duration: 0.3s;
+    background-color: rgb(250, 184, 60);
+    align-items: center;
+    left: 20px;
   }  
-  .scroll-to-top .flecha {
+  /*scroll-to-top .flecha {
     font-size: 2em;
     text-decoration: solid;
+  }*/   
+  .svgIcon {
+    width: 12px;
+    transition-duration: 0.3s;
+  }  
+  .svgIcon path {
+    fill: white;
+  } 
+  .scroll-to-top:hover .svgIcon {
+    /* width: 20px; */
+    transition-duration: 0.3s;
+    transform: translateY(-200%);
+  }  
+  .scroll-to-top::before {
+    position: absolute;
+    bottom: -20px;
+    content: "Back to Top";
+    color: white;
+    /* transition-duration: .3s; */
+    font-size: 0px;
+  }  
+  .scroll-to-top:hover::before {
+    font-size: 13px;
+    opacity: 1;
+    bottom: unset;
+    /* transform: translateY(-30px); */
+    transition-duration: 0.3s;
   }
 
-
+ @keyframes animate {
+  0% {
+    transform: scale(0) translateY(0) rotate(0deg);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.3) translateY(-90px) rotate(360deg);
+    opacity: 0;
+  }
+ }
+@keyframes btnpulse {
+  0% {
+    box-shadow: 0 0 0 0 #3392f7;
+  }
+  100% {
+    box-shadow: 0 0 0 14px #69ffa800;
+  }
+}
 
   /* Ajuste para dispositivos móviles */
 @media (max-width: 768px) {
     body {
       background-attachment: scroll;
     }   
+
+    .box div:nth-child(1) {
+      top: 35%;
+      left: 10%;      
+    }
+    .box div:nth-child(2) {
+      top: 40%;
+      left: 80%;      
+    }
+    .box div:nth-child(3) {
+      top: 25%;
+      left: 40%;      
+    }
+    .box div:nth-child(4) {
+      top: 45%;
+      left: 50%;      
+    }
+    .box div:nth-child(5) {
+      top: 15%;
+      left: 85%;      
+    }
+    .box div:nth-child(6) {
+      top: 10%;
+      left: 10%;      
+    }
+
     .top-bar-title {      
       font-size: 1.05rem;
     }  
     .language-button img {
       width: 30px; 
       height: auto; 
-  }
+    }
 
     .hero-text {
       font-size: 2.1rem;      
