--- a/src/App.css
+++ b/src/App.css
@@ -18,11 +18,34 @@ body {
 }
 
 .bg-hex {
+  position: relative;
   overflow: hidden;
+  width: 100%;
+  height: auto; 
+}
+.bg-hex::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   background: linear-gradient(90deg, rgba(2, 0,121, 1) 0%, rgb(9, 9, 121) 15%, rgb(13, 13, 171) 35%, rgb(9, 61, 104) 55%, rgb(14, 159, 187) 75%, rgba(0, 212, 255, 1) 100%);
   background-size: 400% 400%;
   background-position: 200%;
   animation: gradient 10s infinite;
+  z-index: 1;
+}
+.hex-logo {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 2;
+}
+.content-wrapper {
+  position: relative;
+  z-index: 3;
 }
 @keyframes gradient {
   0% {background-position: 0%; }
@@ -33,11 +56,11 @@ body {
 
 .top-bar {
   display: flex;
-  align-items: center;
-  /*background-color: rgb(11, 69, 203);*/
+  align-items: center;  
   width: 100%;
   position: static; 
-  padding: 20px 0 20px;  
+  padding: 20px 0 20px; 
+  background-color: rgba(8, 50, 146, 0.8);
 }  
 .top-bar-content {
   display: flex;
@@ -76,18 +99,18 @@ body {
 }
 
 
-  .hero-section {
-    /*background-color: hsla(222, 90%, 42%, 1);*/
+  .hero-section {    
+    background-color: rgba(8, 50, 146, 0.8);
     padding: 10px 0 100px;    
     text-align: center;
     width: 100%;
     margin-top: 0; 
-    box-sizing: border-box;     
+    box-sizing: border-box;
   }  
   .hero-image {
-    width: 30px; /* Ajusta este valor según el tamaño que desees */
-    height: auto; /* Mantiene la proporción de la imagen */
-    max-width: 100%; /* Asegura que la imagen no sea más ancha que su contenedor */
+    width: 30px; 
+    height: auto; 
+    max-width: 100%; 
     margin-bottom: 20px;
     animation: rotate 8s linear infinite;    
     transition: all 0.3s ease; 
@@ -131,7 +154,7 @@ body {
     hyphens: auto;
     -webkit-hyphens: auto;
     -ms-hyphens: auto;
-    word-break: break-word;
+    word-break: break-word;    
     transition: font-size 0.5s ease;
   }
 
